--- a/pacman/index.html
+++ b/pacman/index.html
@@ -47,7 +47,7 @@
   // Classifier Variable
   let classifier;
   // Model URL
-  let imageModelURL = './my_model/';
+  let imageModelURL = './my-audio-model/';
   
   // Video
   let video;
