--- a/pacman/index.html
+++ b/pacman/index.html
@@ -49,33 +49,33 @@
   // Model URL
   let audioModelURL = './my-audio-model/';
   
-  // audio
-  let audio;
-  let flippedaudio;
+  // Video
+  let video;
+  let flippedVideo;
   // To store the classification
   let label = "";
 
   // Load the model first
   function preload() {
-    classifier = ml5.audioClassifier(audioModelURL + 'model.json');
+    classifier = ml5.imageClassifier(audioModelURL + 'model.json');
   }
 
   function setup() {
     createCanvas(320, 260);
-    // Create the audio
-    audio = createCapture(audio);
-    audio.size(320, 240);
-    audio.hide();
+    // Create the video
+    video = createCapture(VIDEO);
+    video.size(320, 240);
+    video.hide();
 
-    flippedaudio = ml5.flipaudio(audio);
+    flippedVideo = ml5.flipImage(video);
     // Start classifying
-    classifyaudio();
+    classifyVideo();
   }
 
   function draw() {
     background(0);
-    // Draw the audio
-    audio(flippedaudio, 0, 0);
+    // Draw the video
+    image(flippedVideo, 0, 0);
 
     // Draw the label
     fill(255);
@@ -84,11 +84,11 @@
     text(label, width / 2, height - 4);
   }
 
-  // Get a prediction for the current audio frame
-  function classifyaudio() {
-    flippedaudio = ml5.flipaudio(audio)
-    classifier.classify(flippedaudio, gotResult);
-    flippedaudio.remove();
+  // Get a prediction for the current video frame
+  function classifyVideo() {
+    flippedVideo = ml5.flipImage(video)
+    classifier.classify(flippedVideo, gotResult);
+    flippedVideo.remove();
 
   }
 
@@ -105,7 +105,7 @@
 	$.publish("/vision", label);
 	  
     // Classifiy again!
-    classifyaudio();
+    classifyVideo();
   }
 </script>
 	</body>
